--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,11 +5,12 @@ spring:
     username: root
     password: root
   jpa:
+    open-in-view: false
     hibernate:
       ddl-auto: update
-    properties:
-      hibernate:
-        dialect: org.hibernate.dialect.MySQL8Dialect
+    #properties:
+      #hibernate:
+        #dialect: org.hibernate.dialect.MySQL8Dialect
     show-sql: false
 image:
 tasks:
